--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div class="container">
         <div class="row">
           <div class="intro-text">
-            <h1>Bio-ASP Lab</h1>
+            <h1>You-jin Li </h1>
             <hr>
-            <p>Biology - Acoustic Signal Processing</p>
+            <p>from Biology - Acoustic Signal Processing</p>
             <a href="#nav-dummy" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
         </div>
       </div>
