--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bio-asp Lab</title>
+  <title>You-jin Li</title>
 
   <!-- Stylesheet -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
